# guardrails-mvp-os

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.frontend.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: deploy.yml
app/: __init__.py  config.py  main.py  observability.py  sessions.py
app/agent/: __init__.py  langgraph_runtime.py  llm_factory.py  runtime.py  tools.py
app/dynamic_rails/: __init__.py  builder.py  llm_classifier.py  rule_engine.py  rule_registry.py
app/grounding/: __init__.py  claim_deduplicator.py  claim_extractor.py  claim_verifier.py  indexer.py  models.py  pipeline.py  reaction_handler.py  source_binder.py
app/guardrails/: __init__.py  base.py  factory.py  langchain_backend.py  nemo_backend.py  runtime.py
app/tool_proxy/: __init__.py  policies.py  proxy.py  registry.py
app/utils/: http_client.py  pii_detector.py  rail_generator.py  safety_detector.py
benchmark/: compare.py  evaluate.py  evolution_experiment.py  langmem_evolution_experiment.py  metrics.py  runner.py
benchmark/datasets/: financial.json  general.json  medical.json
benchmark/results/: evolution_gpt-4.1-mini_20260324_014303.json  evolution_gpt-4.1-mini_20260324_014558.json  evolution_gpt-5.1_20260324_032512.json  langmem_evo_gpt-4.1-mini_20260324_095015.json  (+1 more)
frontend/: Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json
presentation/: main.tex
scripts/: init_profiles.py  test_api.sh
tests/: __init__.py  conftest.py  test_api.py  test_tool_proxy.py
(+26 files in other folders)
