[project]
name = "guardrails-mvp-os"
version = "0.1.0"
description = "Factual Grounding Layer Framework — guardrails MVP"
requires-python = ">=3.11"
dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",

    # API Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",

    # NeMo Guardrails (updated for langchain-core 1.x compat)
    "nemoguardrails>=0.21.0,<1.0.0",

    # OpenAI SDK
    "openai>=1.54.0",

    # LangGraph / LangChain (model-agnostic agent runtime)
    "langgraph>=1.1.0,<2.0.0",
    "langchain-core>=1.2.18,<2.0.0",
    "langchain>=1.2.0,<2.0.0",
    "langchain-openai>=1.1.0,<2.0.0",
    "langchain-anthropic>=1.0.0,<2.0.0",
    "langchain-community>=0.4.0,<2.0.0",

    # Data storage
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",

    # Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",

    # Security & validation
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",

    # HTTP client
    "httpx>=0.26.0",

    # Grounding (Factual Grounding Layer)
    "chromadb>=0.5.0,<1.0.0",

    # Self-evolving agent (prompt optimization)
    "langmem>=0.0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "benchmark"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
